feat: routes & API docs order
